fixed the double scrollbar effect

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1497,9 +1497,6 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 }
 
 /* codemirror JS Bin custom styles */
-.CodeMirror-scroll {
-  margin: 0;
-}
 
 .CodeMirror .CodeMirror-scroll > div {
   margin: .6em 0;
